# AtiBot

./: .gitignore  README.md  setup.py
build_files/: README.txt
build_files/autoconf/: Makefile.am  Makefile.in  bootstrap.sh  configure  configure.in
build_files/autoconf/lib/: Makefile.am  Makefile.in  bootstrap.sh  config.h.in  configure  configure.in
build_files/autoconf/simple/: Makefile.am  Makefile.in  configure  configure.in
build_files/autoconf/simple/scripts/: Makefile.in
build_files/vs7_build_bin_dist/: build_dist.bat  copy_common_files.bat  environment_variables.cmd  excluded_files.txt  make_src.bat
build_files/vs7_dll/: pircbotcpp.sln
build_files/vs7_dll_all/: UpgradeLog.XML  UpgradeLog.htm  pircbotcpp.sln  pircbotcpp.vcproj  pircbotcpp.vcxproj  pircbotcpp.vcxproj.filters
build_files/vs7_dll_all/Backup/: pircbotcpp.sln
doc/: README.txt  howtocreateanewrelease.txt  linuxINSTALL.txt  windowsINSTALL.txt
doc/api+samples/html/: _colors_8h-source.html  _exceptions_8h-source.html  _pirc_bot_8h-source.html  _reply_constants_8h-source.html  _user_8h-source.html  all_8h-source.html  annotated.html  class_hack_botcpp-members.html  class_hack_botcpp.html  classpircbot_1_1impl_1_1_colors-members.html  classpircbot_1_1impl_1_1_colors.html  classpircbot_1_1impl_1_1_exception-members.html  classpircbot_1_1impl_1_1_exception.html  classpircbot_1_1impl_1_1_i_o_exception-members.html  classpircbot_1_1impl_1_1_i_o_exception.html  classpircbot_1_1impl_1_1_irc_exception-members.html  classpircbot_1_1impl_1_1_irc_exception.html  classpircbot_1_1impl_1_1_nick_already_in_use_exception-members.html  classpircbot_1_1impl_1_1_nick_already_in_use_exception.html  classpircbot_1_1impl_1_1_pirc_bot-members.html  classpircbot_1_1impl_1_1_pirc_bot.html  classpircbot_1_1impl_1_1_reply_constants-members.html  classpircbot_1_1impl_1_1_reply_constants.html  classpircbot_1_1impl_1_1_user-members.html  classpircbot_1_1impl_1_1_user.html  deprecated.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Finclude_2F.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Finclude_2Fpircbot_2F.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Fsrc_2F.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Fsrc_2Fsamples_2F.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Fsrc_2Fsamples_2Fsimple_2F.html  dirs.html  exports_8h-source.html  files.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x67.html  functions_0x68.html  (+21 more)
doc/api/html/: _colors_8h-source.html  _exceptions_8h-source.html  _pirc_bot_8h-source.html  _reply_constants_8h-source.html  _user_8h-source.html  all_8h-source.html  annotated.html  classpircbot_1_1impl_1_1_colors-members.html  classpircbot_1_1impl_1_1_colors.html  classpircbot_1_1impl_1_1_exception-members.html  classpircbot_1_1impl_1_1_exception.html  classpircbot_1_1impl_1_1_i_o_exception-members.html  classpircbot_1_1impl_1_1_i_o_exception.html  classpircbot_1_1impl_1_1_irc_exception-members.html  classpircbot_1_1impl_1_1_irc_exception.html  classpircbot_1_1impl_1_1_nick_already_in_use_exception-members.html  classpircbot_1_1impl_1_1_nick_already_in_use_exception.html  classpircbot_1_1impl_1_1_pirc_bot-members.html  classpircbot_1_1impl_1_1_pirc_bot.html  classpircbot_1_1impl_1_1_reply_constants-members.html  classpircbot_1_1impl_1_1_reply_constants.html  classpircbot_1_1impl_1_1_user-members.html  classpircbot_1_1impl_1_1_user.html  deprecated.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Finclude_2F.html  dir_C_3A_2FDevelopment_2Fpircbotcpp_2Finclude_2Fpircbot_2F.html  dirs.html  exports_8h-source.html  files.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6a.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  (+16 more)
doc/doxygen/: Doxyfile_api  Doxyfile_api+samples  doxy_it.bat
include/: README.txt
include/asio/detail/: socket_ops.hpp
include/pircbot/: Colors.h  Exceptions.h  PircBot.h  ReplyConstants.h  User.h  all.h  exports.h
include/pircbot/impl/: Exceptions.h  IdentServer.h  InputThread.h  OutputThread.h  Queue.h  Socket.h
src/pircbotcpp/: Colors.cpp  PircBot.cpp  ReplyConstants.cpp  User.cpp  pircbotcpp.cpp
src/pircbotcpp/impl/: IdentServer.cpp  InputThread.cpp  OutputThread.cpp  Queue.cpp  Socket.cpp
src/samples/: README.txt
src/samples/simple/: README.txt  simple.cpp  simple.sln  simple.vcproj  simple.vcxproj  simple.vcxproj.filters
willie/: bot.py  coretasks.py  irc.py
willie/modules/: announce.py  info.py  rss.py  sonatawiki.py
