AC_INIT(../../src/pircbotcpp/PircBot.cpp)
AC_ARG_WITH([doxygen],
		    AC_HELP_STRING([--without-doxygen],
			               ["If you want to disable generating doxygen"]),
			[no_doxygen="true"],,)

AC_ARG_WITH([simple],
            AC_HELP_STRING([--without-simple],
                           ["If you want to disable generating the simple sample"]),
            [no_simple="true"],,)

AC_ARG_WITH([samples],
            AC_HELP_STRING([--without-samples],
                           ["If you want to disable generating all the samples
                             listed above.  This would be console, consoleHtmlConverter,
                             and qtgui"]),
            [no_samples="true"],,)


dnl  These are arguments are hidden.  They are arguments to be used with
dnl the rpm build system.
AC_ARG_WITH([build_prefix],,[BUILD_prefix="$withval"],[BUILD_prefix=/usr/local],)
AC_MSG_RESULT(build_prefix is $BUILD_prefix)
AC_SUBST(BUILD_prefix)

AC_ARG_WITH([build_exec_prefix],,[BUILD_exec_prefix="$withval"],[BUILD_exec_prefix=/usr/local],)
AC_MSG_RESULT(build_exec_prefix is $BUILD_exec_prefix)
AC_SUBST(BUILD_exec_prefix)

AC_ARG_WITH([build_includedir],,[BUILD_includedir="$withval"],[BUILD_includedir=${includedir}],)
AC_MSG_RESULT(build_includedir is $BUILD_includedir)
AC_SUBST(BUILD_includedir)

AC_ARG_WITH([build_libdir],,[BUILD_libdir="$withval"],[BUILD_libdir=${libdir}],)
AC_MSG_RESULT(build_libdir is $BUILD_libdir)
AC_SUBST(BUILD_libdir)

AC_ARG_WITH([build_datadir],,[BUILD_datadir="$withval"],[BUILD_datadir=${datadir}],)
AC_MSG_RESULT(build_datadir is $BUILD_datadir)
AC_SUBST(BUILD_datadir)


if test "$no_doxygen" != true; then
    doxygen_api=../../doc/doxygen/api/html/*.*
    doxygen_api_samples=../../doc/doxygen/api+samples/html/*.*
    doxygenate=doxygenGen

    dnl Create the necessary directories
    mkdir ../../doc/doxygen/api
    mkdir ../../doc/doxygen/api/html
    mkdir ../../doc/doxygen/api+samples
    mkdir ../../doc/doxygen/api+samples/html

    dnl If I don't create at least one file
    dnl The make file will complain
    touch ../../doc/doxygen/api/html/dummy.html
    touch ../../doc/doxygen/api+samples/html/dummy.html

    AC_SUBST(doxygen_api)
    AC_SUBST(doxygen_api_samples)
    AC_SUBST(doxygenate)
fi


AC_CONFIG_SUBDIRS(lib)

if test "$no_samples" != true; then
   if test "$no_simple" != true; then
       AC_CONFIG_SUBDIRS(simple)
       samples="$samples simple"
   fi
fi

AC_SUBST(samples)
AM_INIT_AUTOMAKE(pircbotcpp,0.0.1)
AC_OUTPUT(Makefile)

