AC_INIT(../../../src/pircbotcpp/PircBot.cpp)
AM_INIT_AUTOMAKE(pircbot,0.0.1)
AC_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

AC_PROG_INSTALL

dnl find test the C and C++ compiler
AC_PROG_CC
AC_LANG_C
AC_LANG_CPLUSPLUS
AC_PROG_MAKE_SET

AC_HEADER_STDC

dnl Check all the dependency header files
dnl Make sure they're all there.


AC_CHECK_HEADERS(boost/algorithm/string.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))

AC_CHECK_HEADERS(boost/tokenizer.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))


AC_CHECK_HEADERS(boost/shared_ptr.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))

AC_CHECK_HEADERS(boost/algorithm/string_regex.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))

AC_CHECK_HEADERS(boost/cast.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))

AC_CHECK_HEADERS(boost/lexical_cast.hpp,,
AC_MSG_ERROR([
pircbot cannot find
the above boost header file!  Do you have boost installed
and are pointing to the boost header file?  You need to
have boost installed to work.  Download 
Boost at http://www.boost.org/
]))

AC_CHECK_LIB(boost_filesystem, main,,
AC_MSG_ERROR([
pircbot requires 
boost file system to be installed to work.  Download Boost 
at http://www.boost.org/
]))

AC_CHECK_LIB(boost_regex, main,,
AC_MSG_ERROR([
pircbot requires 
boost regex to be installed to work.  Download Boost
at http://www.boost.org/
]))

AC_CHECK_LIB(boost_date_time, main,,
AC_MSG_ERROR([
pircbot requires boost date and time
to be installed to work.  Download Boost
at http://www.boost.org/
]))	

AC_CHECK_LIB(boost_thread, main,,
AC_MSG_ERROR([
pircbot requires boost date and time
to be installed to work.  Download Boost
at http://www.boost.org/
]))	


dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile)
