AUTOMAKE_OPTS = gnu
bin_PROGRAMS = simple

INCLUDES=-I../../../include
simple_LDADD=../lib/libpircbot-mt.la

simple_SOURCES = ../../../src/samples/simple/simple.cpp

simpleMakefiledir=${datadir}/pircbotcpp/src/samples/simple
simpleMakefile_DATA=scripts/Makefile

simpleSampledir=${datadir}/pircbotcpp/src/samples/simple
simpleSample_DATA=../../../src/samples/simple/*.cpp

